--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mhb-xyz.github.io/SALT",
+  "homepage": "https://saltpdx.com",
   "name": "salt-bio-site",
   "version": "0.1.0",
   "private": true,
